Update current and add resume

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 
 <!-- Add linked in profile somewhere -->
 <!-- Consider axing project page and just having it on main page -->
+<!-- Add resume obviously-->
 
 
 
