Fix Resume Link Name

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             <a href="./index.html"><h2>Home</h2></a>
             <a href="mailto:kie.ran.away@gmail.com?Subject=Hi%20Kieran"><h2>Email</h2></a>
             <a href="./Projects/projectlist.html"><h2>Projects</h2></a>
-            <a href="./Files/resume.pdf"><h2>Resume</h2></a>
+            <a href="./Files/KBB_Resume_9_23.pdf"><h2>Resume</h2></a>
 
         </div>
     </aside>
