Added contact page and summary blurb.

--- a/contactpage.html
+++ b/contactpage.html
@@ -1,25 +1,49 @@
 <!DOCTYPE html>
 <html lang='en'>
 <head>
-    <title>Kieran's Project List</title>
-    <link href="./../style.css" rel="stylesheet">
+    <title>Kieran Balls-Barker</title>
+    <link href="./style.css" rel="stylesheet">
 </head>
 <body>
 
     <aside>
         <div class="navbar">
             <a> </a>
-            <a href="./../index.html"><h2>Home</h2></a>
+            <a href="./index.html"><h2>Home</h2></a>
             <!-- <a href="mailto:kie.ran.away@gmail.com?Subject=Hi%20Kieran"><h2>Email</h2></a> -->
-            <a href="./../Projects/projectlist.html"><h2>Projects</h2></a>
-            <a href="./../Files/KBB_Resume_9_23.pdf"><h2>Resume</h2></a>
-            <a href="./../contactpage.html"><h2>Contact</h2></a>
+            <a href="./Projects/projectlist.html"><h2>Projects</h2></a>
+            <a href="./Files/KBB_Resume_9_23.pdf"><h2>Resume</h2></a>
+            <a href="./contactpage.html"><h2>Contact</h2></a>
             <a> </a>
         </div>
     </aside>
 
+
     <main>
 
+
+        <section>
+            <h2>Contact Information:</h2>
+            <h2>Email: <a href="mailto:balls057@?umn.edu?Subject=Hi%20Kieran">balls057@umn.edu</a></h2>
+            <h2>LinkedIn: <a href="https://www.linkedin.com/in/kieran-balls-barker-1985a2209/">https://www.linkedin.com/in/kieran-balls-barker-1985a2209/</a></h2>
+            <h2>Phone: (612)207-8119</h2>
+            <h2></h2>
+        </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--
         <section>
             <h2>Dots Game</h2>
             <div style="margin-left: 1em">
@@ -60,13 +84,38 @@
         </section>
 
 
+-->
+
+
+
+<!--
+
+
+    <header>
+        <h2>Personal Website of</h2>
+        <h1>Kieran Balls-Barker</h1>
+        <br><br><br>
+
+
+        <h3>I am a solutions-oriented programmer with a background in physics and mathmatics. My broad background gives me a wealth of experience that allows me to approach problems with unique perspectives that allow for adaptability 
+            in continuously evolving environments.</h3>
+        <h3>Welcome to my website: it includes an exhibition of some of the projects I programmed, and hope you enjoy 
+            exploring them as much as I enjoyed making them. Additionally, you'll find my full resume and a link to contact me directly by email. I look forward 
+            to hearing from you.</h3>
+        <br>
+        <h3>Use navigation bar at the top to access various resources.</h3>
+
+    </header>
+
+
+    <main>
+        
     </main>
+-->
 
-
-
-
-
-
+<!-- Add linked in profile somewhere -->
+<!-- Consider axing project page and just having it on main page -->
+<!-- Add resume obviously-->
 
 
 
