--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
         <div class="navbar">
             <a> </a>
             <a href="./index.html"><h2>Home</h2></a>
-            <a href="mailto:kie.ran.away@gmail.com?Subject=Hi%20Kieran"><h2>Email</h2></a>
+            <!-- <a href="mailto:kie.ran.away@gmail.com?Subject=Hi%20Kieran"><h2>Email</h2></a> -->
             <a href="./Projects/projectlist.html"><h2>Projects</h2></a>
             <a href="./Files/KBB_Resume_9_23.pdf"><h2>Resume</h2></a>
+            <a href="./contactpage.html"><h2>Contact</h2></a>
             <a> </a>
         </div>
     </aside>
@@ -22,6 +23,13 @@
         <h1>Kieran Balls-Barker</h1>
         <br><br><br>
 
+
+        <h3>I am a solutions-oriented programmer with a background in physics and mathmatics. My broad background gives me a wealth of experience that allows me to approach problems with unique perspectives that allow for adaptability 
+            in continuously evolving environments.</h3>
+        <h3>Welcome to my website: it includes an exhibition of some of the projects I programmed, and hope you enjoy 
+            exploring them as much as I enjoyed making them. Additionally, you'll find my full resume and a link to contact me directly by email. I look forward 
+            to hearing from you.</h3>
+        <br>
         <h3>Use navigation bar at the top to access various resources.</h3>
 
     </header>
