Add Github link

--- a/contactpage.html
+++ b/contactpage.html
@@ -25,6 +25,7 @@
         <section>
             <h2>Contact Information:</h2>
             <h2>Email: <a href="mailto:balls057@?umn.edu?Subject=Hi%20Kieran">balls057@umn.edu</a></h2>
+            <h2>Github: <a href="https://www.github.com/KieranBB">github.com/KieranBB</a></h2>
             <h2>LinkedIn: <a href="https://www.linkedin.com/in/kieran-balls-barker-1985a2209/">https://www.linkedin.com/in/kieran-balls-barker-1985a2209/</a></h2>
             <h2>Phone: (612)207-8119</h2>
             <h2></h2>
