--- a/Projects/projectlist.html
+++ b/Projects/projectlist.html
@@ -27,8 +27,7 @@
                 <p>The Replit version is a little slow. If you have a Python environment set up, running it locally would be much smoother.</p>
                 <p>Replit link: <a href='https://replit.com/@kleptoholik/DotsWIP'>https://replit.com/@kleptoholik/DotsWIP</a></p>
                 <p>Github link: <a href='https://github.com/kleptoholik/DotsProject'>https://github.com/kleptoholik/DotsProject</a></p>
-                <p>Edit: Apparently in order to run someone else's replit project you have to fork it first, which is a little tedious.</p>
-                <p>I'll look into setting up a javascript version to more easily show in the near future.</p>
+                <p>Edit: Apparently in order to run someone else's replit project you have to fork it first, which is a little tedious. I'll look into setting up a javascript version to more easily show in the near future.</p>
             </div>
         </section>
 
