--- a/contactpage.html
+++ b/contactpage.html
@@ -12,7 +12,7 @@
             <a href="./index.html"><h2>Home</h2></a>
             <!-- <a href="mailto:kie.ran.away@gmail.com?Subject=Hi%20Kieran"><h2>Email</h2></a> -->
             <a href="./Projects/projectlist.html"><h2>Projects</h2></a>
-            <a href="./Files/KBB_Resume_9_23.pdf"><h2>Resume</h2></a>
+            <a href="./Files/KBB_Resume_11_24.pdf"><h2>Resume</h2></a>
             <a href="./contactpage.html"><h2>Contact</h2></a>
             <a> </a>
         </div>
@@ -24,7 +24,7 @@
 
         <section>
             <h2>Contact Information:</h2>
-            <h2>Email: <a href="mailto:balls057@?umn.edu?Subject=Hi%20Kieran">balls057@umn.edu</a></h2>
+            <h2>Email: <a href="mailto:ballsbarkerkieran@?gmail.com?Subject=Hi%20Kieran">BallsBarkerKieran@gmail.com</a></h2>
             <h2>Github: <a href="https://www.github.com/KieranBB">github.com/KieranBB</a></h2>
             <h2>LinkedIn: <a href="https://www.linkedin.com/in/kieran-balls-barker-1985a2209/">https://www.linkedin.com/in/kieran-balls-barker-1985a2209/</a></h2>
             <h2>Phone: (612)207-8119</h2>
