--- a/contactpage.html
+++ b/contactpage.html
@@ -12,7 +12,7 @@
             <a href="./index.html"><h2>Home</h2></a>
             <!-- <a href="mailto:kie.ran.away@gmail.com?Subject=Hi%20Kieran"><h2>Email</h2></a> -->
             <a href="./Projects/projectlist.html"><h2>Projects</h2></a>
-            <a href="./Files/KBB_Resume_11_24.pdf"><h2>Resume</h2></a>
+            <a href="./Files/Kieran_Resume_10_25.pdf"><h2>Resume</h2></a>
             <a href="./contactpage.html"><h2>Contact</h2></a>
             <a> </a>
         </div>
